# LogicKing

./: CMakeLists.txt  Metody.cpp  Metody.h  main.cpp
